[metadata]
name = staligner
version = attr: staligner.__version__

[options]
zip_safe = True
packages = find:
install_requires =
  imageio ~= 2.4.1
  numpy ~= 1.16.2
  pandas ~= 0.24.1
  scipy ~= 1.2.1
python_requires = ~= 3.7

[options.entry_points]
console_scripts =
  staligner = staligner.__main__:main
